[package]
name = "flanders"
version = "0.3.1"
authors = ["Radovan Bast <bast@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "flanders"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
rayon = "1.7"
pyo3 = { version = "0.18", features = ["extension-module"] }
