[package]
name = "flanders"
version = "0.3.1"
authors = ["Radovan Bast <bast@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"

[lib]
name = "flanders"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9.2"
rayon = "1.11.0"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
